refactor(api): Упростилась структура ответа
